# realcraft

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  MILESTONES.md  PRD.md  README.md  TDD.md  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
cmake/: BuildOptions.cmake  CompilerSettings.cmake  Dependencies.cmake  PlatformDetection.cmake
include/realcraft/core/: config.hpp  core.hpp  engine.hpp  game_loop.hpp  logger.hpp  memory.hpp
include/realcraft/gameplay/: block_interaction.hpp  inventory.hpp  item.hpp  item_entity.hpp  player_stats.hpp
include/realcraft/graphics/: buffer.hpp  command_buffer.hpp  device.hpp  graphics.hpp  pipeline.hpp  render_pass.hpp  sampler.hpp  shader.hpp  shader_compiler.hpp  swap_chain.hpp  texture.hpp  types.hpp
include/realcraft/physics/: chunk_collider.hpp  colliders.hpp  convex_hull_generator.hpp  debris_system.hpp  fluid_simulation.hpp  fragmentation.hpp  impact_damage.hpp  physics.hpp  physics_world.hpp  player_controller.hpp  ray_caster.hpp  rigid_body.hpp  structural_integrity.hpp  support_graph.hpp  types.hpp
include/realcraft/platform/: file_io.hpp  input.hpp  input_action.hpp  key_codes.hpp  platform.hpp  timer.hpp  window.hpp
include/realcraft/rendering/: camera.hpp  chunk_mesh.hpp  frustum.hpp  hud_renderer.hpp  lighting.hpp  mesh_generator.hpp  mesh_manager.hpp  mesh_vertex.hpp  procedural_texture.hpp  render_system.hpp  rendering.hpp  texture_atlas.hpp  texture_manager.hpp
include/realcraft/world/: biome.hpp  block.hpp  cave_generator.hpp  chunk.hpp  chunk_data.hpp  climate.hpp  erosion.hpp  erosion_context.hpp  erosion_heightmap.hpp  ore_generator.hpp  origin_shifter.hpp  serialization.hpp  structure_generator.hpp  terrain_generator.hpp  tree_generator.hpp  types.hpp  vegetation_generator.hpp  world.hpp  world_manager.hpp
scripts/: build.bat  build.sh  setup-vcpkg.sh
shaders/glsl/: basic.frag  basic.vert  erosion.comp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  config.cpp  engine.cpp  game_loop.cpp  logger.cpp  memory.cpp
src/gameplay/: CMakeLists.txt  block_interaction.cpp  inventory.cpp  item.cpp  item_entity.cpp
src/graphics/: CMakeLists.txt  device.cpp  shader_compiler.cpp
src/graphics/metal/: metal_buffer.mm  metal_command_buffer.mm  metal_device.mm  metal_impl.hpp  metal_pipeline.mm  metal_render_pass.mm  metal_sampler.mm  metal_shader.mm  metal_swap_chain.mm  metal_texture.mm  metal_types.hpp
src/graphics/vulkan/: vulkan_device.cpp
src/physics/: CMakeLists.txt  chunk_collider.cpp  colliders.cpp  convex_hull_generator.cpp  debris_system.cpp  fluid_simulation.cpp  fragmentation.cpp  impact_damage.cpp  physics_world.cpp  player_controller.cpp  ray_caster.cpp  rigid_body.cpp  structural_integrity.cpp  support_graph.cpp
src/platform/: CMakeLists.txt  file_io.cpp  input.cpp  input_mapper.cpp  key_codes.cpp  timer.cpp  window.cpp
src/platform/macos/: window_macos.mm
src/rendering/: CMakeLists.txt  camera.cpp  chunk_mesh.cpp  frustum.cpp  hud_renderer.cpp  lighting.cpp  mesh_generator.cpp  mesh_manager.cpp  procedural_texture.cpp  render_system.cpp  texture_atlas.cpp  texture_manager.cpp
src/world/: CMakeLists.txt  biome.cpp  block.cpp  block_registry.cpp  cave_generator.cpp  chunk.cpp  chunk_data.cpp  climate.cpp  erosion.cpp  erosion_context.cpp  erosion_cpu.cpp  erosion_gpu.cpp  erosion_heightmap.cpp  ore_generator.cpp  origin_shifter.cpp  river_carver.cpp  serialization.cpp  structure_generator.cpp  terrain_generator.cpp  tree_generator.cpp  vegetation_generator.cpp  world_manager.cpp
tests/: CMakeLists.txt  placeholder_test.cpp
tests/unit/gameplay/: inventory_test.cpp  item_test.cpp
tests/unit/physics/: chunk_collider_test.cpp  colliders_test.cpp  debris_system_test.cpp  fluid_simulation_test.cpp  fragmentation_test.cpp  physics_world_test.cpp  player_controller_test.cpp  ray_caster_test.cpp  rigid_body_test.cpp  structural_integrity_test.cpp  types_test.cpp
tests/unit/platform/: file_io_test.cpp  input_mapper_test.cpp  key_codes_test.cpp  timer_test.cpp
tests/unit/rendering/: camera_test.cpp  frustum_test.cpp  lighting_test.cpp  mesh_vertex_test.cpp
tests/unit/world/: biome_test.cpp  block_test.cpp  cave_test.cpp  chunk_border_test.cpp  chunk_data_test.cpp  chunk_test.cpp  climate_test.cpp  erosion_test.cpp  ore_test.cpp  serialization_test.cpp  structure_test.cpp  terrain_generator_test.cpp  tree_test.cpp  types_test.cpp  vegetation_test.cpp
